SAK-18135 merge trunk r74314
git-svn-id: https://source.sakaiproject.org/svn/content/branches/sakai-2.7.x@76012 66ffb92e-73f9-0310-93c1-f5514f145a0a